tests/gen-test/test_out/vec-test.txt
error: cast between generic types is not allowed
  --> vec-test\deps\github.com\jakubDoka\water\main\root\vec.ctl:14:18
   |
14 |             ptr: cast(0)
   |                  ^^^^^^^ happened here
   |
   = info: cast from uint to ^mut param0, which contain generic parameters that depend on function instance

error: cast between generic types is not allowed
  --> vec-test\deps\github.com\jakubDoka\water\main\root\vec.ctl:22:18
   |
22 |             ptr: cast(malloc(cap * sizeof\[T]()))
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ happened here
   |
   = info: cast from ^mut () to ^mut param0, which contain generic parameters that depend on function instance

error: cast between generic types is not allowed
  --> vec-test\deps\github.com\jakubDoka\water\main\root\vec.ctl:40:27
   |
40 |         memcpy(new_alloc, cast(self.ptr), self.len * sizeof\[T]())
   |                           ^^^^^^^^^^^^^^ happened here
   |
   = info: cast from ^mut param0 to ^(), which contain generic parameters that depend on function instance

error: cast between generic types is not allowed
  --> vec-test\deps\github.com\jakubDoka\water\main\root\vec.ctl:41:14
   |
41 |         free(cast(self.ptr))
   |              ^^^^^^^^^^^^^^ happened here
   |
   = info: cast from ^mut param0 to ^(), which contain generic parameters that depend on function instance

error: cast between generic types is not allowed
  --> vec-test\deps\github.com\jakubDoka\water\main\root\vec.ctl:42:20
   |
42 |         self.ptr = cast(new_alloc)
   |                    ^^^^^^^^^^^^^^^ happened here
   |
   = info: cast from ^mut () to ^mut param0, which contain generic parameters that depend on function instance

error: cast between generic types is not allowed
  --> vec-test\deps\github.com\jakubDoka\water\main\root\vec.ctl:46:14
   |
46 |         cast(cast\[^mut T, uint](self.ptr) + index * sizeof\[T]())
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ happened here
   |
   = info: cast from ^mut param0 to uint, which contain generic parameters that depend on function instance

error: cast between generic types is not allowed
  --> vec-test\deps\github.com\jakubDoka\water\main\root\vec.ctl:46:9
   |
46 |         cast(cast\[^mut T, uint](self.ptr) + index * sizeof\[T]())
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ happened here
   |
   = info: cast from uint to ^param0, which contain generic parameters that depend on function instance

error: cast between generic types is not allowed
  --> vec-test\deps\github.com\jakubDoka\water\main\root\vec.ctl:50:14
   |
50 |         cast(cast\[^mut T, uint](self.ptr) + index * sizeof\[T]())
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ happened here
   |
   = info: cast from ^mut param0 to uint, which contain generic parameters that depend on function instance

error: cast between generic types is not allowed
  --> vec-test\deps\github.com\jakubDoka\water\main\root\vec.ctl:50:9
   |
50 |         cast(cast\[^mut T, uint](self.ptr) + index * sizeof\[T]())
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ happened here
   |
   = info: cast from uint to ^mut param0, which contain generic parameters that depend on function instance

error: type mismatch
  --> vec-test\root.ctl:6:17
   |
 6 |   fn main -> uint {
   |  _________________^
...  |
14 | | }
   | |_^ mismatch occurred here
   |
   = info: expected 'uint' but got '()'

info: generated ir:


